# ml-trainings

./: README.md  colab.sh  pyproject.toml
fashion-mnist/: README.md  exp001-simple-dense-model.ipynb  exp002-conv-model.ipynb  exp003-bach-normalization.ipynb  exp004-conv-model-5.ipynb  exp004-conv-model-6.ipynb  exp004-densenet.ipynb  exp005-colab.ipynb  exp005-conv-model-6.ipynb  exp006-data-augmentation.ipynb  exp007-mixup.ipynb  exp008-random-erase.ipynb  exp102_conv_model.ipynb  exp103_batch_normalization.ipynb  exp104_tuning_exp103.ipynb  exp105_image_generator_and_one_hot.ipynb  exp106_augmentation_zoom.ipynb  exp107_retry_exp007.ipynb  exp108_random_seed_unfix.ipynb  exp109_random_seed_unfix_exp106.ipynb  exp110_resnet.ipynb  exp111_cosine_decay.ipynb  exp112_lr_adj.ipynb  exp113_resnet_expansion.ipynb  exp114_aug_mixup.ipynb  exp115_resnet_expansion_adj.ipynb  mish.py  sample.ipynb
keiba/: README.md  nb001_preapare_dataset.ipynb
