[tool.poetry]
name = "ml-trainings"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
selenium = "^4.1.3"
jupyterlab = "^3.3.2"
chromedriver-binary-auto = "^0.1.1"
tqdm = "^4.63.1"
ipywidgets = "^7.7.0"
numpy = "^1.22.3"
pandas = "^1.4.1"
memory-profiler = "^0.60.0"
Pympler = "^1.0.1"
tensorflow = "^2.8.0"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
